--- a/task06.html
+++ b/task06.html
@@ -11,13 +11,19 @@
         body {
             width: 980px;
             position: relative;
+            overflow-x:hidden;
+
         }
         .container {
             height: 1386px;
-            width: 100%;
+            width: 892px;
+            min-width: 920px;
+            max-width: 980px;
             padding: 0 247px 0 247px;
-            position: absolute;
-            left: 0;
+            position: relative;
+            left: -203px;
+            margin: 0 auto;
+
         }
 
         /*header部分CSS*/
