--- a/task06.html
+++ b/task06.html
@@ -9,25 +9,21 @@
             font-family: "Microsoft YaHei";
         }
         body {
-            width: 980px;
-            position: relative;
-            overflow-x:hidden;
+            background-color: #000;
 
         }
         .container {
+            width: 980px;
             height: 1386px;
-            width: 892px;
-            min-width: 920px;
-            max-width: 980px;
-            padding: 0 247px 0 247px;
+            background-color: #fff;
+            padding: 0 44px;
+            margin: 40px auto;
             position: relative;
-            left: -203px;
-            margin: 0 auto;
-
         }
 
         /*header部分CSS*/
         .header {
+            width: 892px;
             height: 61px;
             border-bottom: 2px solid #938e8c;
             position: relative;
@@ -72,6 +68,7 @@
             padding: 40px 0 40px 0;
             float: left;
             margin: auto 0;
+            margin-left: 44px;
 
         }
         .part1-content {;
@@ -231,7 +228,7 @@
         .part2 {
             width: 892px;
             float: left;
-            margin-bottom: 38px;
+            margin-left: 44px;
         }
         .part2-left {
             width: 415px;
@@ -422,7 +419,8 @@
             width: 892px;
             border-top: 1px solid #938e8c;
             position: absolute;
-            bottom: 44px;
+            bottom: 48px;
+            margin-left: 44px;
         }
         .footer p {
             font-family: "SimHei";
